# omniget

docs/: COURSE_PLATFORMS.md
src-tauri/: Cargo.toml
src-tauri/omniget-cli/: Cargo.toml
src-tauri/omniget-cli/src/: main.rs
src-tauri/omniget-core/src/core/: known_course_platforms.rs  mod.rs
src-tauri/omniget-core/src/models/: course.rs  mod.rs
src-tauri/src/: lib.rs
src-tauri/src/commands/: course.rs  mod.rs
src-tauri/src/core/: queue.rs  url_parser.rs
src/components/course/: CoursePlatformCard.svelte  CoursePreviewPanel.svelte
src/components/dialog/: DialogContainer.svelte
src/lib/i18n/: en.json  keys.ts
src/routes/: +page.svelte
