[package]
name = "omniget-cli"
version = "0.4.2"
edition = "2021"
description = "OmniGet CLI — download videos and courses from the terminal"

[[bin]]
name = "omniget"
path = "src/main.rs"

[dependencies]
omniget-core = { path = "../omniget-core", features = ["desktop"] }
tokio = { version = "1", features = ["full"] }
anyhow = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
clap = { version = "4", features = ["derive", "color"] }
indicatif = "0.17"
colored = "2"
dirs = "6"
url = "2"
sanitize-filename = "0.6"
chrono = { version = "0.4" }
which = "7"
regex = "1"
reqwest = { version = "0.12", default-features = false, features = ["json", "cookies", "rustls-tls", "stream"] }
async-trait = "0.1"
open = "5"
tokio-util = { version = "0.7", features = ["rt"] }
